# djinn_in_a_box

./: .env.example  .gitignore  DOCKER-SOCKET-SECURITY.md  Dockerfile  IMPLEMENTATION.md  README.md  devops.py  docker-compose.docker-direct.yml  docker-compose.docker.yml  docker-compose.yml  packages.txt.example  pyproject.toml
config/: agents.json  agents.toml
config/claude/: CLAUDE.md  GOVERNANCE.md  GUIDELINES.md  MASTER.md  agent_complete_notify_hook.py  post_edit_lint_hook.py  ready_notify_hook.py  security_reminder_hook.py  settings.json
config/claude/agents/: backend-engineer.md  code-architect.md  code-engineer.md  code-simplifier.md  comment-analyzer.md  frontend-developer.md  lead-architect.md  pr-test-analyzer.md  qa-specialist.md  silent-failure-hunter.md  type-design-analyzer.md
config/claude/commands/: code-review.md  dump.md  init-project.md  new-skill.md  review-pr.md  task.md  update-claude-md.md
config/claude/skills/architect-workflow/: SKILL.md
config/claude/skills/pr-review/: SKILL.md
config/claude/templates/: dev-template.json
config/gemini/: GEMINI.md  settings.json
config/opencode/: GOVERNANCE.md  OPENCODE.md  session-template.md  settings.json
config/opencode/commands/: backend-engineer.md  dump.md  frontend-developer.md  new-skill.md  qa-specialist.md  task.md
docs/: headless-cheatsheet.md  zshrc-codeagent-snippet.sh  zshrc-djinn-snippet.sh
docs/design/: CLI_DESIGN_SYSTEM.md
mcp/: README.md  docker-compose.yml  mcp.sh
scripts/: agent_runner.py  colors.sh  dev.sh  entrypoint.sh  init-firewall.sh  update-agents.sh
src/ai_dev_base/: __init__.py
src/ai_dev_base/cli/: __init__.py  codeagent.py  mcpgateway.py
src/ai_dev_base/commands/: __init__.py  agent.py  config.py  container.py  mcp.py
src/ai_dev_base/config/: __init__.py  defaults.py  loader.py  models.py
src/ai_dev_base/core/: __init__.py  console.py  decorators.py  docker.py  exceptions.py  paths.py  theme.py
src/djinn_in_a_box/: __init__.py
src/djinn_in_a_box/cli/: __init__.py  djinn.py  mcpgateway.py
src/djinn_in_a_box/commands/: __init__.py  agent.py  config.py  container.py  mcp.py
src/djinn_in_a_box/config/: __init__.py  defaults.py  loader.py  models.py
src/djinn_in_a_box/core/: __init__.py  console.py  decorators.py  docker.py  exceptions.py  paths.py  theme.py
templates/: devcontainer.json
tests/: conftest.py  test_cli_codeagent.py  test_cli_djinn.py  test_cli_mcpgateway.py  test_config_loader.py  test_config_models.py  test_console.py  test_decorators.py  test_docker.py  test_paths.py
tests/test_commands/: __init__.py  test_agent.py  test_container.py  test_mcp.py
tools/: install.sh  tools.txt.example
tools/installers/: azure-cli.sh  bun.sh  psql.sh  pulumi.sh  sops.sh
(+5 files in other folders)
